2009-08-26	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* score/inline/rtems/score/address.inl: Added const qualifier
	to parameters.  Added cast to _Addresses_Subtract() fix a warning.

2009-08-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libfs/src/devfs/devfs.h: Fix spelling error.

2009-08-26	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* sapi/include/rtems/config.h: Changed stack allocator signature to
	match the one of _Workspace_Allocate().

2009-08-24	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* libmisc/stackchk/check.c, rtems/src/regionreturnsegment.c,
	rtems/src/regiongetsegmentsize.c, src/heapalignupuptr.c,
	src/heapallocatealigned.c, src/heapallocate.c, src/heap.c,
	src/heapextend.c, src/heapfree.c, src/heapgetfreeinfo.c,
	src/heapgetinfo.c, src/heapresizeblock.c, src/heapsizeofuserarea.c,
	src/heapwalk.c, src/pheapgetblocksize.c, inline/rtems/score/heap.inl,
	include/rtems/score/heap.h: Overall cleanup.  Changed all types for
	addresses, sizes, offsets and alignments to uintptr_t.  Reformatted.
	Added variables for clarity.  Renamed various objects.  Enabled
	_HAssert() for all instances.  More changes follow.

2009-08-25	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libfs/src/devfs/devfs_eval.c: Fix bug where use of strncmp() resulted
	in a partial match being considered a full name match. On ERC32,
	looking for /dev/console would match /dev/console_b first.

2009-08-21	Roxana Leontie <roxana.leontie@gmail.com>

	* Makefile.am, preinstall.am, libmisc/Makefile.am: Changed the name of
	mw-fb directory into fb.  Relocated files.
	* libmisc/fb/fb.h, libmisc/fb/mw_uid.c, libmisc/fb/mw_uid.h: New files.
	* libmisc/mw-fb/fb.h, libmisc/mw-fb/mw_uid.c, libmisc/mw-fb/mw_uid.h:
	Removed.

2009-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sapi/include/confdefs.h, score/Makefile.am,
	score/include/rtems/score/thread.h: Only instantiate
	_Thread_Idle_body() if it is going ot be used.
	* score/src/threadidlebody.c: Removed.
